# stego-side-wing

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  _requirements_backup.txt  extreact_searched_values.py  google-response-example.json  main.py  prompts.md  pyproject.toml  pyrightconfig.json  requirements.txt  schema.json
.cursor/rules/: jsonl-observability.mdc  maintainability.mdc  python-architecture.mdc  sender-receiver-testing.mdc
.github/workflows/: ci.yml
clean_dataset/: go.mod  main.go
config/: workflow_llm_prompts.json
docs/: api-spec.md  architecture-layers.md  data_load_pipeline_report.html  gen_angles_pipeline_report.html  research-pipeline-report.html  stego-pipeline-report.html  validation-per-phase.md
functions/: DsCsSampling.js  compression.js  compressionInput.json  embed.js  fetchUrlWFilter.js  patch.js  search results patch.js
functions/v2/: AngleSelection.js  Pick comment.js  TextBasedCompression.js  UnifiedEmbedding.js  UnifiedEmbedding.js.output.json  UnifiedEmbeddingV2.js  UnifiedEmbeddingV3.input.json  UnifiedEmbeddingV3.js  WrapPost.js
scripts/: avg_er.py  avg_kld.py  avg_perplexity.py  backup-n8n.sh  check_angles.js  clean_data_boxing.py  clean_news_researched.py  clean_non_english.py  lm_studio_chat_smoke.py  make_schema.py  migrate_output_results_n8n_shape.py  sync_missing_search_results.py
src/: API.py  REFACTOR_SUMMARY.md  ai_analyze.py  event_loop_manager.py  headless_browser_analyzer.py  scraper.py
src/angles/: angle_runner.py
src/app/: __init__.py  app_factory.py
src/content_acquisition/: __init__.py  ai_analyze.py  headless_browser_analyzer.py  scraper.py
src/infrastructure/: __init__.py  cache.py  config.py  event_loop.py  json_logging.py  loguru_jsonl.py  stdio_utf8.py
src/integrations/: duckduckgo_api.py  jina_reader.py  lumen_api.py  news_api.py  scrapingdog_api.py
workflows/: 27rZrYtywu3k9e7Q.json  CsTX5fW9cJIlMTxg.json  GKmFzs1YuxtNztna.json  GhAbcOIAo7F9UMaA.json  QOEoMtp1u1wVDP1u.json  ot3lZXFjtZy2fcxD.json  tWT6U8IK_9oUBlJMRl0oa.json
(+123 files in other folders)
